compiling_error.txt
C:\Users\lisas\Desktop\UVA\Tweedejaarsproject\NearestNeighbor-GPU\nns.cpp: In function 'void NSS(const list_t&, std::size_t, callback_list_t)':
C:\Users\lisas\Desktop\UVA\Tweedejaarsproject\NearestNeighbor-GPU\nns.cpp:60:38: error: expected identifier before numeric constant
                 output.emplace_back([1]);
                                      ^
C:\Users\lisas\Desktop\UVA\Tweedejaarsproject\NearestNeighbor-GPU\nns.cpp: In lambda function:
C:\Users\lisas\Desktop\UVA\Tweedejaarsproject\NearestNeighbor-GPU\nns.cpp:60:40: error: expected '{' before ')' token
                 output.emplace_back([1]);
                                        ^
In file included from c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\mingw32\bits\c++allocator.h:33:0,
                 from c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\allocator.h:46,
                 from c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\string:41,
                 from c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\stdexcept:39,
                 from c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\array:39,
                 from C:\Users\lisas\Desktop\UVA\Tweedejaarsproject\NearestNeighbor-GPU\nns.cpp:1:
c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\ext\new_allocator.h: In instantiation of 'void __gnu_cxx::new_allocator<_Tp>::construct(_Up*, _Args&& ...) [with _Up = std::array<unsigned int, 2u>; _Args = {NSS(const list_t&, std::size_t, callback_list_t)::<lambda()>}; _Tp = std::array<unsigned int, 2u>]':
c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\alloc_traits.h:455:4:   required from 'static void std::allocator_traits<std::allocator<_CharT> >::construct(std::allocator_traits<std::allocator<_CharT> >::allocator_type&, _Up*, _Args&& ...) [with _Up = std::array<unsigned int, 2u>; _Args = {NSS(const list_t&, std::size_t, callback_list_t)::<lambda()>}; _Tp = std::array<unsigned int, 2u>; std::allocator_traits<std::allocator<_CharT> >::allocator_type = std::allocator<std::array<unsigned int, 2u> >]'
c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\vector.tcc:96:30:   required from 'void std::vector<_Tp, _Alloc>::emplace_back(_Args&& ...) [with _Args = {NSS(const list_t&, std::size_t, callback_list_t)::<lambda()>}; _Tp = std::array<unsigned int, 2u>; _Alloc = std::allocator<std::array<unsigned int, 2u> >]'
C:\Users\lisas\Desktop\UVA\Tweedejaarsproject\NearestNeighbor-GPU\nns.cpp:60:40:   required from here
c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\ext\new_allocator.h:120:4: error: no matching function for call to 'std::array<unsigned int, 2u>::array(NSS(const list_t&, std::size_t, callback_list_t)::<lambda()>)'
  { ::new((void *)__p) _Up(std::forward<_Args>(__args)...); }
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from C:\Users\lisas\Desktop\UVA\Tweedejaarsproject\NearestNeighbor-GPU\nns.cpp:1:0:
c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\array:90:12: note: candidate: std::array<unsigned int, 2u>::array()
     struct array
            ^~~~~
c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\array:90:12: note:   candidate expects 0 arguments, 1 provided
c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\array:90:12: note: candidate: constexpr std::array<unsigned int, 2u>::array(const std::array<unsigned int, 2u>&)
c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\array:90:12: note:   no known conversion for argument 1 from 'NSS(const list_t&, std::size_t, callback_list_t)::<lambda()>' to 'const std::array<unsigned int, 2u>&'
c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\array:90:12: note: candidate: constexpr std::array<unsigned int, 2u>::array(std::array<unsigned int, 2u>&&)
c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\array:90:12: note:   no known conversion for argument 1 from 'NSS(const list_t&, std::size_t, callback_list_t)::<lambda()>' to 'std::array<unsigned int, 2u>&&'
